--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.0",
     "@swimlane/ngx-charts": "^17.0.0",
     "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
